[gd_scene load_steps=6 format=3 uid="uid://pbdg4frl5eya"]

[ext_resource type="Script" uid="uid://jdgnti6vhtf7" path="res://layout/row.gd" id="1_57rgh"]
[ext_resource type="PackedScene" uid="uid://do6xyeyxir46s" path="res://layout/monster_card_position.tscn" id="1_wbr0x"]
[ext_resource type="PackedScene" uid="uid://esl0lura0cve" path="res://characters/Character3D.tscn" id="3_ho6ov"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xtwng"]
height = 0.1
radius = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ho6ov"]
top_radius = 1.0
bottom_radius = 1.0
height = 0.1

[node name="Row" type="Node3D"]
script = ExtResource("1_57rgh")

[node name="PlayerPosition" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0924, -0.05, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerPosition"]
shape = SubResource("CylinderShape3D_xtwng")

[node name="Temp" type="MeshInstance3D" parent="PlayerPosition/CollisionShape3D"]
mesh = SubResource("CylinderMesh_ho6ov")
skeleton = NodePath("../..")

[node name="MonsterCardPosition1" parent="." instance=ExtResource("1_wbr0x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="MonsterCardPosition2" parent="." instance=ExtResource("1_wbr0x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)

[node name="MonsterCardPosition3" parent="." instance=ExtResource("1_wbr0x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, 0)

[node name="MonsterCardPosition4" parent="." instance=ExtResource("1_wbr0x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="MonsterCardPosition5" parent="." instance=ExtResource("1_wbr0x")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0, 0)

[node name="Temp_Characters" type="Node3D" parent="."]

[node name="Character3D_1" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="Character3D_2" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0.503)

[node name="Character3D_3" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0.503)

[node name="Character3D_4" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, 0.503)

[node name="Character3D_5" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0.503)

[node name="Character3D_6" parent="Temp_Characters" instance=ExtResource("3_ho6ov")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0, 0.503)
